--- a/src/styles.css
+++ b/src/styles.css
@@ -16,13 +16,13 @@ body {
   margin: 30px auto;
   overflow: auto;
   min-height: 300px;
-  border: 1px solid steelblue;
+  border: 2px solid gray;
   padding: 30px;
   border-radius: 5px;
 }
 .btn {
   display: inline-block;
-  background: #000;
+  background: blue;
   color: #fff;
   border: none;
   padding: 10px 20px;
